feate: add new server gateway
