# openapi.yaml
@@ -1,34 +1,23 @@
 # Generated with protoc-gen-openapi
-# https://github.com/google/gnostic/tree/master/apps/protoc-gen-openapi
+# https://github.com/google/gnostic/tree/master/cmd/protoc-gen-openapi
 
 openapi: 3.0.3
 info:
-    title: User API
+    title: UserAPI API
     description: 用户接口定义
     version: 0.0.1
 paths:
     /user/register:
         post:
             tags:
-                - User
-            operationId: User_Register
-            parameters:
-                - name: appId
-                  in: query
-                  schema:
-                    type: string
-                - name: channelId
-                  in: query
-                  schema:
-                    type: string
-                - name: account
-                  in: query
-                  schema:
-                    type: string
-                - name: name
-                  in: query
-                  schema:
-                    type: string
+                - UserAPI
+            operationId: UserAPI_Register
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/UserRegisterRequest'
+                required: true
             responses:
                 "200":
                     description: OK
@@ -36,12 +25,57 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/UserRegisterResponse'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
 components:
     schemas:
+        GoogleProtobufAny:
+            type: object
+            properties:
+                '@type':
+                    type: string
+                    description: The type of the serialized message.
+            additionalProperties: true
+            description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
+        Status:
+            type: object
+            properties:
+                code:
+                    type: integer
+                    description: The status code, which should be an enum value of [google.rpc.Code][google.rpc.Code].
+                    format: int32
+                message:
+                    type: string
+                    description: A developer-facing error message, which should be in English. Any user-facing error message should be localized and sent in the [google.rpc.Status.details][google.rpc.Status.details] field, or localized by the client.
+                details:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/GoogleProtobufAny'
+                    description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
+            description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
+        UserRegisterRequest:
+            type: object
+            properties:
+                appId:
+                    type: string
+                channelId:
+                    type: string
+                account:
+                    type: string
+                name:
+                    type: string
+                fields:
+                    type: object
+                    additionalProperties:
+                        type: string
         UserRegisterResponse:
             type: object
             properties:
                 uid:
                     type: string
 tags:
-    - name: User
+    - name: UserAPI
